--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -3,6 +3,6 @@ body {
   font-family: 'Roboto', 'Noto', sans-serif;
   line-height: 1.5;
   min-height: 100vh;
-  background: rgba(0,0,0,0.6);
-  color: rgba(255, 255, 255, 1.0);
+  background: #303030;
+  color: #FFFFFF;
 }
