--- a/app/styles/base.css
+++ b/app/styles/base.css
@@ -1,8 +1,1 @@
-body {
-  margin: 20px;
-  font-family: 'Roboto', 'Noto', sans-serif;
-  line-height: 1.5;
-  min-height: 100vh;
-  background: #303030;
-  color: #FFFFFF;
-}
+body{margin:20px;font-family:'Roboto', 'Noto', sans-serif;line-height:1.5;min-height:100vh;background:#303030;color:#FFFFFF;}
